--- a/style.css
+++ b/style.css
@@ -13,6 +13,26 @@ body {
     background-color: grey;
 }
 
+*{
+   margin: 0;
+   padding: 0; 
+}
+hr{
+    height: 0;
+    border: none;
+    border-top: 1px solid #dedede;
+
+}
+.topnavbar{
+    padding: 20px 0px 20px 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.topnavbar-inner{
+    padding: 0px 16px 0px 16px;
+}
 .topnavbar nav{
     font-size: 13px;
     padding-top: 8px;
@@ -25,22 +45,22 @@ body {
     font-weight: bold;
 }
 
-.topnavbar>nav>ul{
+.topnavbar nav>ul{
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.topnavbar>nav>ul>li{
+.topnavbar nav>ul>li{
    float: left;
    margin-left: 17px;
    margin-right: 17px;
 }
-.topnavbar>nav>ul>li>a{
+.topnavbar nav>ul>li>a{
     border-bottom: 3px solid transparent;
 }
 
-.topnavbar>nav>ul>li>a:hover{
+.topnavbar nav>ul>li>a:hover{
     border-bottom-color: #DC6465;
 
 }
@@ -57,4 +77,111 @@ body {
 
 .topnavbar .logo .card{
     color:#9a9da2;
+}
+
+.banner{
+    height: 515px;
+    background-image: url(./img/phot3.jpg);
+    background-position: center center;
+    background-size: cover;
+}
+
+.banner .mask{
+    height: 515px;
+    background-color: rgba(0, 0, 0, 0.8); 
+}
+
+.card{
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffff;
+}
+
+.card .welcome{
+    background: #e6686a;
+    color: white;
+    display: inline-block;
+    padding: 4px 16px ;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.card .welcome .triangle{
+    display: block;
+    border:10px solid transparent;
+    width: 0px;
+    height: 0px;
+    border-left-color: #e6686a;
+    border-top-width: 0px;
+    position: absolute;
+    left:4px;
+    top:100%;
+}
+
+.card .picture{
+    float: left;
+}
+
+.card .text{
+   float: left;
+   margin-left: 65px;
+   width: 400px;
+}
+
+.card .pictureandtext{
+    padding: 50px;
+}
+.card .text h1{
+    margin-top: 18px;
+}
+
+.card .text p{
+    margin-top: 8px;
+}
+
+.card hr{
+    margin: 20px 0px;
+}
+
+.card dl dt,
+.card dl dd{
+    float:left;
+}
+
+.card dl dt{
+    width: 30%;
+    font-weight: bold;
+    margin: 10px 0px;
+}
+.card dl dd{
+    width: 70%;
+    color: #9da0a7;
+    margin: 10px 0px;
+}
+
+.card>footer {
+    background:#e6686a; 
+    text-align: center;
+
+}
+
+.card svg{
+    width: 20px;
+    height: 20px;
+    fill: white;
+    vertical-align: top;
+}
+
+.card>footer>a{
+    display: inline-block;
+    width: 30px;
+    line-height: 20px;
+    padding: 5px 0;
+    border-radius: 50%;
+    margin: 16px 0;
+}
+
+.card>footer :hover{
+    background: #cf5d5f;
 }
