--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ a{
 
 
 body {
-    background-color: grey;
+    background-color: #efefef;
+    margin:  0px;
 }
 
 *{
@@ -23,20 +24,25 @@ hr{
     border-top: 1px solid #dedede;
 
 }
+h1,h2,h3,h4,h5,h6{
+    font-weight: normal;
+}
+
+ul,ol{
+    list-style: none;
+}
 .topnavbar{
-    padding: 20px 0px 20px 0px;
+    padding: 0px 0px 0px 0px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
 }
 .topnavbar-inner{
-    padding: 0px 16px 0px 16px;
+    padding: 30px 16px 0px 16px;
 }
 .topnavbar nav{
     font-size: 13px;
-    padding-top: 8px;
-    padding-bottom: 8px; 
 }
 
 .topnavbar nav a {
@@ -57,7 +63,14 @@ hr{
    margin-right: 17px;
 }
 .topnavbar nav>ul>li>a{
+    font-size: 12px;
+    color:#b7b7b7;
+    font-weight: bold;
+    border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: block;
 }
 
 .topnavbar nav>ul>li>a:hover{
@@ -80,22 +93,24 @@ hr{
 }
 
 .banner{
+    
     height: 515px;
-    background-image: url(./img/phot3.jpg);
+    background-image: url(./img/phot2.jpg);
     background-position: center center;
     background-size: cover;
 }
 
 .banner .mask{
-    height: 515px;
-    background-color: rgba(0, 0, 0, 0.8); 
+    height: 515px; 
+    background-color: #242832cc;
 }
 
 .card{
-    max-width: 940px;
+    max-width: 930px;
     margin-left: auto;
     margin-right: auto;
     background-color: #ffff;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
 }
 
 .card .welcome{
@@ -163,6 +178,7 @@ hr{
 .card>footer {
     background:#e6686a; 
     text-align: center;
+    
 
 }
 
@@ -175,9 +191,9 @@ hr{
 
 .card>footer>a{
     display: inline-block;
-    width: 30px;
+    width: 50px;
     line-height: 20px;
-    padding: 5px 0;
+    padding: 14px 0;
     border-radius: 50%;
     margin: 16px 0;
 }
@@ -185,3 +201,98 @@ hr{
 .card>footer :hover{
     background: #cf5d5f;
 }
+
+
+body main{
+    margin-top: -340px;
+}
+
+body main .downloadresume{
+    font-size: 14px;
+    line-height: 16px;
+    padding: 21px 55px;
+    display: inline-block;
+    border: 1px solid #cdcfd1;
+    background-color: #efefef;
+    border-radius: 3px;
+    color:#3d4451;
+    font-weight: bold;
+    margin: 32px 0;
+    transition: box-shadow 0.3s;
+
+}
+
+body main .downloadresume-wrapper{
+    text-align: center;
+}
+
+body main .downloadresume:hover{
+    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
+} 
+
+.self-introduction{
+    max-width: 930px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+
+section.skills{
+    max-width: 930px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    
+}
+
+section>h2{
+    text-align: center; 
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+    margin-top: 60px;
+}
+
+section  h3{
+    font-size: 14px;
+    line-height: 1.1;
+    padding-right: 40px;
+}
+
+section.skills>ol{
+    background-color: white;
+    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
+    padding: 42px 50px 0px;
+    margin-top:30px;
+
+}
+section.skills>ol>li{
+
+    float: left;
+    width: 48%;
+    box-sizing: border-box;
+
+ 
+}
+section.skills>ol>li:nth-child(even){
+
+    float: right;
+}
+section .progressBar{
+    height: 3px;
+    background: #fae1e1;
+    border-radius: 2px;
+    margin: 4px 0 40px;
+
+}
+section .progress{
+    height: 100%;
+    background: #e6686a;
+    width: 50%;
+    border-radius: 2px;
+} 
+
+
+
