--- a/style.css
+++ b/style.css
@@ -1,298 +1,104 @@
-.clearfix::after{
-    content: '';
-    display: block;
-    clear: both;
-}
-a{
-    color:inherit;
-    text-decoration: none;
-}
+.clearfix::after { content: ''; display: block; clear: both; } 
 
+a { color: inherit; text-decoration: none; } 
 
-body {
-    background-color: #efefef;
-    margin:  0px;
-}
+body { background-color: #efefef; margin: 0px; } 
 
-*{
-   margin: 0;
-   padding: 0; 
-}
-hr{
-    height: 0;
-    border: none;
-    border-top: 1px solid #dedede;
+* { margin: 0; padding: 0; } 
 
-}
-h1,h2,h3,h4,h5,h6{
-    font-weight: normal;
-}
+hr { height: 0; border: none; border-top: 1px solid #dedede; } 
 
-ul,ol{
-    list-style: none;
-}
-.topnavbar{
-    padding: 0px 0px 0px 0px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-.topnavbar-inner{
-    padding: 30px 16px 0px 16px;
-}
-.topnavbar nav{
-    font-size: 13px;
-}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 { font-weight: normal; } 
 
-.topnavbar nav a {
-    color: rgba(255, 255, 255, 0.7);
-    text-decoration: none;
-    font-weight: bold;
-}
+ul,
+ol { list-style: none; } 
 
-.topnavbar nav>ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+.topnavbar { padding: 0px 0px 0px 0px; position: fixed; top: 0; left: 0; width: 100%; } 
 
-.topnavbar nav>ul>li{
-   float: left;
-   margin-left: 17px;
-   margin-right: 17px;
-}
-.topnavbar nav>ul>li>a{
-    font-size: 12px;
-    color:#b7b7b7;
-    font-weight: bold;
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    display: block;
-}
+.topnavbar-inner { padding: 30px 16px 0px 16px; } 
 
-.topnavbar nav>ul>li>a:hover{
-    border-bottom-color: #DC6465;
+.topnavbar nav { font-size: 13px; } 
 
-}
+.topnavbar nav a { color: rgba(255, 255, 255, 0.7); text-decoration: none; font-weight: bold; } 
 
-.topnavbar .logo{
-    padding-top: 1px;
-    font-size: 22px;
-    font-family: "Arial Black";
-}
-.topnavbar .logo .rs{
-    margin: 4px;
-    color: #e6686a;
-}
+.topnavbar nav>ul { list-style: none; padding: 0; margin: 0; } 
 
-.topnavbar .logo .card{
-    color:#9a9da2;
-}
+.topnavbar nav>ul>li { float: left; margin-left: 17px; margin-right: 17px; } 
 
-.banner{
-    
-    height: 515px;
-    background-image: url(./img/phot2.jpg);
-    background-position: center center;
-    background-size: cover;
-}
+.topnavbar nav>ul>li>a { font-size: 12px; color: #b7b7b7; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block; } 
 
-.banner .mask{
-    height: 515px; 
-    background-color: #242832cc;
-}
+.topnavbar nav>ul>li>a:hover { border-bottom-color: #DC6465; } 
 
-.card{
-    max-width: 930px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ffff;
-    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.49);
-}
+.topnavbar .logo { padding-top: 1px; font-size: 22px; font-family: "Arial Black"; } 
 
-.card .welcome{
-    background: #e6686a;
-    color: white;
-    display: inline-block;
-    padding: 4px 16px ;
-    position: relative;
-    margin-bottom: 10px;
-}
+.topnavbar .logo .rs { margin: 4px; color: #e6686a; } 
 
-.card .welcome .triangle{
-    display: block;
-    border:10px solid transparent;
-    width: 0px;
-    height: 0px;
-    border-left-color: #e6686a;
-    border-top-width: 0px;
-    position: absolute;
-    left:4px;
-    top:100%;
-}
+.topnavbar .logo .card { color: #9a9da2; } 
 
-.card .picture{
-    float: left;
-}
+.banner { height: 515px; background-image: url(./img/phot2.jpg); background-position: center center; background-size: cover; } 
 
-.card .text{
-   float: left;
-   margin-left: 65px;
-   width: 400px;
-}
+.banner .mask { height: 515px; background-color: #242832cc; } 
 
-.card .pictureandtext{
-    padding: 50px;
-}
-.card .text h1{
-    margin-top: 18px;
-}
+.card { max-width: 930px; margin-left: auto; margin-right: auto; background-color: #ffff; box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.49); } 
 
-.card .text p{
-    margin-top: 8px;
-}
+.card .welcome { background: #e6686a; color: white; display: inline-block; padding: 4px 16px; position: relative; margin-bottom: 10px; } 
 
-.card hr{
-    margin: 20px 0px;
-}
+.card .welcome .triangle { display: block; border: 10px solid transparent; width: 0px; height: 0px; border-left-color: #e6686a; border-top-width: 0px; position: absolute; left: 4px; top: 100%; } 
+
+.card .picture { float: left; } 
+
+.card .text { float: left; margin-left: 65px; width: 400px; } 
+
+.card .pictureandtext { padding: 50px; } 
+
+.card .text h1 { margin-top: 18px; } 
+
+.card .text p { margin-top: 8px; } 
+
+.card hr { margin: 20px 0px; } 
 
 .card dl dt,
-.card dl dd{
-    float:left;
-}
+.card dl dd { float: left; } 
 
-.card dl dt{
-    width: 30%;
-    font-weight: bold;
-    margin: 10px 0px;
-}
-.card dl dd{
-    width: 70%;
-    color: #9da0a7;
-    margin: 10px 0px;
-}
+.card dl dt { width: 30%; font-weight: bold; margin: 10px 0px; } 
 
-.card>footer {
-    background:#e6686a; 
-    text-align: center;
-    
+.card dl dd { width: 70%; color: #9da0a7; margin: 10px 0px; } 
 
-}
+.card>footer { background: #e6686a; text-align: center; } 
 
-.card svg{
-    width: 20px;
-    height: 20px;
-    fill: white;
-    vertical-align: top;
-}
+.card svg { width: 20px; height: 20px; fill: white; vertical-align: top; } 
 
-.card>footer>a{
-    display: inline-block;
-    width: 50px;
-    line-height: 20px;
-    padding: 14px 0;
-    border-radius: 50%;
-    margin: 16px 0;
-}
+.card>footer>a { display: inline-block; width: 50px; line-height: 20px; padding: 14px 0; border-radius: 50%; margin: 16px 0; } 
 
-.card>footer :hover{
-    background: #cf5d5f;
-}
+.card>footer :hover { background: #cf5d5f; } 
 
+body main { margin-top: -340px; } 
 
-body main{
-    margin-top: -340px;
-}
+body main .downloadresume { font-size: 14px; line-height: 16px; padding: 21px 55px; display: inline-block; border: 1px solid #cdcfd1; background-color: #efefef; border-radius: 3px; color: #3d4451; font-weight: bold; margin: 32px 0; transition: box-shadow 0.3s; } 
 
-body main .downloadresume{
-    font-size: 14px;
-    line-height: 16px;
-    padding: 21px 55px;
-    display: inline-block;
-    border: 1px solid #cdcfd1;
-    background-color: #efefef;
-    border-radius: 3px;
-    color:#3d4451;
-    font-weight: bold;
-    margin: 32px 0;
-    transition: box-shadow 0.3s;
+body main .downloadresume-wrapper { text-align: center; } 
 
-}
+body main .downloadresume:hover { box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2); } 
 
-body main .downloadresume-wrapper{
-    text-align: center;
-}
+.self-introduction { max-width: 930px; margin-left: auto; margin-right: auto; text-align: center; } 
 
-body main .downloadresume:hover{
-    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
-} 
+section.skills { max-width: 930px; margin-left: auto; margin-right: auto; text-align: center; } 
 
-.self-introduction{
-    max-width: 930px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
+section>h2 { text-align: center; color: #3d4451; font-size: 34px; line-height: 1.2; font-weight: 600; margin-top: 60px; } 
 
+section h3 { font-size: 14px; line-height: 1.1; padding-right: 40px; } 
 
-section.skills{
-    max-width: 930px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    
-}
+section.skills>ol { background-color: white; box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2); padding: 42px 50px 0px; margin-top: 30px; } 
 
-section>h2{
-    text-align: center; 
-    color: #3d4451;
-    font-size: 34px;
-    line-height: 1.2;
-    font-weight: 600;
-    margin-top: 60px;
-}
+section.skills>ol>li { float: left; width: 48%; box-sizing: border-box; } 
 
-section  h3{
-    font-size: 14px;
-    line-height: 1.1;
-    padding-right: 40px;
-}
+section.skills>ol>li:nth-child(even) { float: right; } 
 
-section.skills>ol{
-    background-color: white;
-    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
-    padding: 42px 50px 0px;
-    margin-top:30px;
+section .progressBar { height: 3px; background: #fae1e1; border-radius: 2px; margin: 4px 0 40px; } 
 
-}
-section.skills>ol>li{
-
-    float: left;
-    width: 48%;
-    box-sizing: border-box;
-
- 
-}
-section.skills>ol>li:nth-child(even){
-
-    float: right;
-}
-section .progressBar{
-    height: 3px;
-    background: #fae1e1;
-    border-radius: 2px;
-    margin: 4px 0 40px;
-
-}
-section .progress{
-    height: 100%;
-    background: #e6686a;
-    width: 50%;
-    border-radius: 2px;
-} 
-
-
-
+section .progress { height: 100%; background: #e6686a; width: 50%; border-radius: 2px; } 
