--- a/style.css
+++ b/style.css
@@ -23,11 +23,45 @@ ul,ol { list-style: none; }
 
 .topnavbar nav>ul { list-style: none; padding: 0; margin: 0; } 
 
-.topnavbar nav>ul>li { float: left; margin-left: 17px; margin-right: 17px; } 
+.topnavbar nav>ul>li { float: left; margin-left: 17px; margin-right: 17px; position: relative;} 
 
-.topnavbar nav>ul>li>a { font-size: 12px;color:inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block; } 
+.topnavbar nav>ul>li>a { font-size: 12px;color:inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block;
+position: relative;
+} 
 
-.topnavbar nav>ul>li>a:hover { border-bottom-color: #DC6465; } 
+.topnavbar nav>ul>li>a:hover::after {
+    content: '';
+    position: absolute;
+    display: block;
+    top:100%;
+    left: 0;
+    width: 100%;
+    right: 0;
+    background: #e6686a;
+    height: 3px;
+    animation: menuslide 1s;
+} 
+
+@keyframes menuslide{
+    0%{
+        width: 0;
+    }
+    100%{
+        width: 100%;
+    }
+}
+.topnavbar .submenu{
+    display: none;
+    position: absolute;
+    left:0;
+    top: 100%;
+}
+.topnavbar .submenu.active{
+    display: block;
+}
+.topnavbar .submenu > li{
+    white-space: nowrap;
+}
 
 .topnavbar .logo { padding-top: 1px; font-size: 22px; font-family: "Arial Black"; } 
 
