--- a/style.css
+++ b/style.css
@@ -12,56 +12,35 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; }
 
 ul,ol { list-style: none; } 
 
-.topnavbar.sticky { background: #ffffff; padding: 10px 0px; z-index:1; box-shadow:0 0 3px rgba(0, 0, 0,0.25);color:#474646}
-.topnavbar { padding: 20px 0px; position: fixed; top: 0; left: 0; width: 100%; transition: all 0.5s;color:#b7b7b7} 
+.topnavbar.sticky { background: #ffffff; padding: 10px 0px; z-index:1; box-shadow:0 0 3px rgba(0, 0, 0,0.25); color:#474646 } 
+.topnavbar { padding: 20px 0px; position: fixed; top: 0; left: 0; width: 100%; transition: all 0.5s; color:#b7b7b7 } 
 
 .topnavbar-inner { padding: 0px 16px; } 
 
 .topnavbar nav { padding-top: 0px; font-size: 13px; } 
 
-.topnavbar nav a {  text-decoration: none; font-weight: bold; } 
+.topnavbar nav a { text-decoration: none; font-weight: bold; } 
 
 .topnavbar nav>ul { list-style: none; padding: 0; margin: 0; } 
 
-.topnavbar nav>ul>li { float: left; margin-left: 17px; margin-right: 17px; position: relative;} 
+.topnavbar nav>ul>li { float: left; margin-left: 17px; margin-right: 17px; position: relative; } 
 
-.topnavbar nav>ul>li>a { font-size: 12px;color:inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block;
-position: relative;
-} 
+.topnavbar nav>ul>li>a { font-size: 12px; color:inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block;position: relative; } 
 
-.topnavbar nav>ul>li>a:hover::after {
-    content: '';
-    position: absolute;
-    display: block;
-    top:100%;
-    left: 0;
-    width: 100%;
-    right: 0;
-    background: #e6686a;
-    height: 3px;
-    animation: menuslide 1s;
-} 
+.topnavbar nav>ul>li.active a::after { content: ''; position: absolute; display: block; top:100%; left: 0; width: 100%; right: 0; background: #e6686a; height: 3px; animation: menuslide 1s; } 
 
-@keyframes menuslide{
-    0%{
-        width: 0;
-    }
-    100%{
-        width: 100%;
-    }
-}
-.topnavbar .submenu{
-    display: none;
-    position: absolute;
-    left:0;
-    top: 100%;
-}
-.topnavbar .submenu.active{
-    display: block;
-}
-.topnavbar .submenu > li{
-    white-space: nowrap;
-}
+@keyframes menuslide { 
+ 0% { width: 0; } 
+ 100% { width: 100%; } 
+ }
+.topnavbar .submenu { display: none; position: absolute; right: 0; top: 100%; background:white; color: #3d4451; box-shadow : 0px 1px 5px 0px rgba(0, 0, 0, 0.49); } 
+@keyframes submenuslide { 
+ 0% { margin-right: 100%}
+ 100% { margin-right: 0} 
+ }
+
+.topnavbar li.active> .submenu { display: block; animation: submenuslide 1s; } 
+.topnavbar .submenu > li { white-space: nowrap; padding:10px; } 
 
 .topnavbar .logo { padding-top: 1px; font-size: 22px; font-family: "Arial Black"; } 
 
