--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ ul,ol { list-style: none; }
  100% { margin-right: 0} 
  }
 
+ .self-introduction { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; font-family: kai; line-height: 1.8; font-size: 18px; }
+
 .topnavbar li.active> .submenu { display: block; animation: submenuslide 1s; } 
 .topnavbar .submenu > li { white-space: nowrap; padding:10px; } 
 
@@ -81,9 +83,9 @@ ul,ol { list-style: none; }
 
 .card svg { width: 20px; height: 20px; fill: white; vertical-align: top; } 
 
-.card>footer>a { display: inline-block; width: 50px; line-height: 20px; padding: 14px 0; border-radius: 50%; margin: 16px 0; } 
+.card>footer>a { display: inline-block; width: 50px; line-height: 20px; padding: 12px 0; border-radius: 50%; margin: 12px 0;  transition: box-shadow 0.3s;} 
 
-.card>footer :hover { background: #cf5d5f; } 
+.card>footer :hover { background: #cf5d5f;box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);} 
 
 body main { margin-top: -340px; } 
 
@@ -95,11 +97,13 @@ body main .downloadresume:hover { box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2
 
 .self-introduction { max-width: 930px; margin-left: auto; margin-right: auto; text-align: center; } 
 
-section.skills { max-width: 930px; margin-left: auto; margin-right: auto; text-align: center; } 
+section.skills,
+section.portfolio { max-width: 930px; margin-left: auto; margin-right: auto; text-align: center; } 
 
-section>h2 { text-align: center; color: #3d4451; font-size: 34px; line-height: 1.2; font-weight: 600; margin-top: 60px; } 
+section.skills > h2,
+section.portfolio > h2 { text-align: center; color: #3d4451; font-size: 34px; line-height: 1.2; font-weight: 600; margin-top: 60px; } 
 
-section h3 { font-size: 14px; line-height: 1.1; padding-right: 40px; } 
+section.skills h3 { font-size: 14px; line-height: 1.1; padding-right: 40px; } 
 
 section.skills>ol { background-color: white; box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2); padding: 42px 50px 0px; margin-top: 30px; } 
 
@@ -110,3 +114,17 @@ section.skills>ol>li:nth-child(even) { float: right; }
 section .progressBar { height: 3px; background: #fae1e1; border-radius: 2px; margin: 4px 0 40px; } 
 
 section .progress { height: 100%; background: #e6686a; width: 50%; border-radius: 2px; } 
+
+section.portfolio { text-align: center; margin-bottom: 100px; } 
+section.portfolio > nav { text-align: center; } 
+section.portfolio > nav > ol { margin: 0 auto; display: inline-block; vertical-align: top; } 
+section.portfolio > nav > ol > li { float: left; margin-left: 40px; cursor: pointer; } 
+section.portfolio > nav > ol > li:first-child { margin-left: 0; } 
+section.portfolio > nav { display: inline-block; vertical-align: top; margin-top: 32px; } 
+section.portfolio > nav .bar { height: 5px; background: white; margin-top: 5px; margin-bottom: 28px; border-radius: 2px; } 
+section.portfolio > nav .bar-inner { height: 100%; background: #E6686A; border-radius: 2px; transition: all 0.3s; } 
+section.portfolio > nav .bar.state-1 .bar-inner { margin-left: 0; width: 50px; } 
+section.portfolio > nav .bar.state-2 .bar-inner { margin-left: 65px; width: 50px; } 
+section.portfolio > nav .bar.state-3 .bar-inner { margin-left: 140px; width: 96px; } 
+section.portfolio .works { position: relative; } 
+section.portfolio .works > .big, section.portfolio .works > .small { position: absolute; } 
