--- a/style.css
+++ b/style.css
@@ -25,21 +25,30 @@ ul,ol { list-style: none; }
 
 .topnavbar nav>ul>li { float: left; margin-left: 17px; margin-right: 17px; position: relative; } 
 
-.topnavbar nav>ul>li>a { font-size: 12px; color:inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block;position: relative; } 
+.topnavbar nav>ul>li>a { font-size: 12px; color:inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block; position: relative; } 
 
-.topnavbar nav>ul>li.active a::after { content: ''; position: absolute; display: block; top:100%; left: 0; width: 100%; right: 0; background: #e6686a; height: 3px; animation: menuslide 1s; } 
+.topnavbar nav>ul>li.active > a::after { content: ''; position: absolute; display: block; top:100%; left: 0; width: 100%; right: 0; background: #e6686a; height: 3px; animation: menuslide 1s; } 
 
+.topnavbar nav>ul>li.highlight > a::after { content: ''; position: absolute; display: block; top:100%; left: 0; width: 100%; right: 0; background: #e6686a; height: 3px; animation: menuslide 1s; } 
+
+[data-x].active { outline: 10px solid red; } 
+[data-x].offset { transform: translateY(100px); } 
+[data-x] { transform: translateY(0); transition: all 0.5s; } 
+ @keyframes slideUp { 
+ 0% { transform: translateY(-30px); } 
+ 100% { transform: translateY(0); } 
+ }
 @keyframes menuslide { 
  0% { width: 0; } 
  100% { width: 100%; } 
  }
 .topnavbar .submenu { display: none; position: absolute; right: 0; top: 100%; background:white; color: #3d4451; box-shadow : 0px 1px 5px 0px rgba(0, 0, 0, 0.49); } 
 @keyframes submenuslide { 
- 0% { margin-right: 100%}
- 100% { margin-right: 0} 
+ 0% { margin-right: 100% } 
+ 100% { margin-right: 0 } 
  }
 
- .self-introduction { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; font-family: kai; line-height: 1.8; font-size: 18px; }
+ .self-introduction { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; font-family: kai; line-height: 1.8; font-size: 18px; } 
 
 .topnavbar li.active> .submenu { display: block; animation: submenuslide 1s; } 
 .topnavbar .submenu > li { white-space: nowrap; padding:10px; } 
@@ -83,9 +92,9 @@ ul,ol { list-style: none; }
 
 .card svg { width: 20px; height: 20px; fill: white; vertical-align: top; } 
 
-.card>footer>a { display: inline-block; width: 50px; line-height: 20px; padding: 12px 0; border-radius: 50%; margin: 12px 0;  transition: box-shadow 0.3s;} 
+.card>footer>a { display: inline-block; width: 50px; line-height: 20px; padding: 12px 0; border-radius: 50%; margin: 12px 0; transition: box-shadow 0.3s; } 
 
-.card>footer :hover { background: #cf5d5f;box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);} 
+.card>footer :hover { background: #cf5d5f; box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2); } 
 
 body main { margin-top: -340px; } 
 
@@ -111,9 +120,9 @@ section.skills>ol>li { float: left; width: 48%; box-sizing: border-box; }
 
 section.skills>ol>li:nth-child(even) { float: right; } 
 
-section .progressBar { height: 3px; background: #fae1e1; border-radius: 2px; margin: 4px 0 40px; } 
-
-section .progress { height: 100%; background: #e6686a; width: 50%; border-radius: 2px; } 
+section.skills .progressBar{ height: 3px; background: #fae1e1; border-radius: 2px; margin: 4px 0 40px;overflow: hidden; } 
+section.skills .progressBar > .progress { height: 100%; background: #e6686a; width: 50%; border-radius: 2px; transform: translateX(0); transition: all 1s; } 
+section.skills.offset .progress { transform: translateX(-100%); } 
 
 section.portfolio { text-align: center; margin-bottom: 100px; } 
 section.portfolio > nav { text-align: center; } 
