--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; }
 
 ul,ol { list-style: none; } 
 
+
+.site-welcome { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgb(228, 222, 222); z-index: 1; justify-content: center; align-items: center; } 
+
+.site-welcome.active { display: flex; } 
+
 .topnavbar.sticky { background: #ffffff; padding: 10px 0px; z-index:1; box-shadow:0 0 3px rgba(0, 0, 0,0.25); color:#474646 } 
 .topnavbar { padding: 20px 0px; position: fixed; top: 0; left: 0; width: 100%; transition: all 0.5s; color:#b7b7b7 } 
 
@@ -47,6 +52,12 @@ ul,ol { list-style: none; }
  0% { margin-right: 100% } 
  100% { margin-right: 0 } 
  }
+
+ .icon { width: 1em; height: 1em; vertical-align: -0.15em; fill: currentColor; overflow: hidden; } 
+
+.site-welcome { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgb(228, 222, 222); z-index: 1; justify-content: center; align-items: center; } 
+
+.site-welcome.active { display: flex; } 
 
  .self-introduction { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; font-family: kai; line-height: 1.8; font-size: 18px; } 
 
@@ -120,20 +131,14 @@ section.skills>ol>li { float: left; width: 48%; box-sizing: border-box; }
 
 section.skills>ol>li:nth-child(even) { float: right; } 
 
-section.skills .progressBar{ height: 3px; background: #fae1e1; border-radius: 2px; margin: 4px 0 40px;overflow: hidden; } 
+section.skills .progressBar { height: 3px; background: #fae1e1; border-radius: 2px; margin: 4px 0 40px; overflow: hidden; } 
 section.skills .progressBar > .progress { height: 100%; background: #e6686a; width: 50%; border-radius: 2px; transform: translateX(0); transition: all 1s; } 
 section.skills.offset .progress { transform: translateX(-100%); } 
 
 section.portfolio { text-align: center; margin-bottom: 100px; } 
-section.portfolio > nav { text-align: center; } 
-section.portfolio > nav > ol { margin: 0 auto; display: inline-block; vertical-align: top; } 
-section.portfolio > nav > ol > li { float: left; margin-left: 40px; cursor: pointer; } 
-section.portfolio > nav > ol > li:first-child { margin-left: 0; } 
-section.portfolio > nav { display: inline-block; vertical-align: top; margin-top: 32px; } 
-section.portfolio > nav .bar { height: 5px; background: white; margin-top: 5px; margin-bottom: 28px; border-radius: 2px; } 
-section.portfolio > nav .bar-inner { height: 100%; background: #E6686A; border-radius: 2px; transition: all 0.3s; } 
-section.portfolio > nav .bar.state-1 .bar-inner { margin-left: 0; width: 50px; } 
-section.portfolio > nav .bar.state-2 .bar-inner { margin-left: 65px; width: 50px; } 
-section.portfolio > nav .bar.state-3 .bar-inner { margin-left: 140px; width: 96px; } 
-section.portfolio .works { position: relative; } 
-section.portfolio .works > .big, section.portfolio .works > .small { position: absolute; } 
+
+section.portfolio .swiper-container { margin-top: 35px; width: 940px; height: 480px; } 
+
+section.portfolio .swiper-slide>img { margin: 0; padding: 0; max-height: 100%; max-width: 100%; } 
+
+section.portfolio .swiper-pagination-bullet-active { opacity: 1; background: #e6686a; } 
