--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body main .downloadresume:hover { box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2
 
 section.message,
 section.skills,
-section.portfolio { max-width: 930px; margin-left: auto; margin-right: auto; text-align: center; } 
+section.portfolio { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; } 
 
 section.message > h2,
 section.skills > h2,
@@ -145,9 +145,13 @@ section.portfolio .swiper-slide>img { margin: 0; padding: 0; max-height: 100%; m
 
 section.portfolio .swiper-pagination-bullet-active { opacity: 1; background: #e6686a; } 
 
+section.message > h2{
+    margin-top: 30px; 
+}
 
-
-
-section.message {
-    border: 1px solid red;
+section.message>ol{
+    background-color: white; box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2); padding: 42px 50px 0px; margin-top: 30px; 
+}
+section.message>ol>li{
+    padding: 10px;
 }
