--- a/style.css
+++ b/style.css
@@ -149,9 +149,12 @@ section.message > h2{
     margin-top: 30px; 
 }
 
-section.message>ol{
+
+
+section.message{
     background-color: white; box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2); padding: 42px 50px 0px; margin-top: 30px; 
 }
 section.message>ol>li{
     padding: 10px;
+    border-bottom: 1px solid #797b7e;
 }
