--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ section.skills .progressBar > .progress { height: 100%; background: #e6686a; wid
 section.portfolio { max-width: 940px; margin-left: auto; margin-right: auto;} 
 .work > ol > li > div{
     height: 200px;
-    text-align: center;
+    
 }
 .work > ol{
     display: flex;
@@ -148,11 +148,13 @@ section.portfolio { max-width: 940px; margin-left: auto; margin-right: auto;}
     align-items:flex-start;
 }
 .work > ol > li{
-    width:45%
+    width:45%;
+    background-color: white;
 }
 .work > ol > li{
     margin-top:30px; 
     box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);
+    text-align: left;
 }
 
 section.message > h2 { margin-top: 30px; margin-bottom: 30px;} 
